# StreamFlux

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/streamflux/: MainActivity.kt  StreamFluxApp.kt
app/src/main/java/com/streamflux/data/models/: PlayerSettings.kt  VideoFile.kt
app/src/main/java/com/streamflux/data/preferences/: PreferencesManager.kt
app/src/main/java/com/streamflux/data/repository/: MediaRepository.kt
app/src/main/java/com/streamflux/player/: ExoPlayerEngine.kt  NativeHelper.kt  PlayerController.kt  PlayerEngine.kt  VlcPlayerEngine.kt
app/src/main/java/com/streamflux/ui/components/: ExpressiveMotion.kt  WavyProgressIndicator.kt  WavyRefreshIcon.kt
app/src/main/java/com/streamflux/ui/screens/: HomeScreen.kt  PermissionScreen.kt
app/src/main/java/com/streamflux/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/streamflux/viewmodel/: FolderViewModel.kt  HomeViewModel.kt  PlayerViewModel.kt  SettingsViewModel.kt
